--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,10 @@ body {
   font-weight: 400;
 }
 
+canvas {
+  background: gray;
+}
+
 .wrapper {
   width: 90%;
   margin: 0 auto;
@@ -95,11 +99,35 @@ nav a:hover {
   padding: 20px 0;
 }
 
-.carousel-container .wrapper h3{
+.carousel-container .wrapper h3 {
   color: #373e48;
   font-size: 1em;
   font-weight: 300;
   line-height: .7;
+}
+
+.carousel-container {
+  background-color: orange;
+}
+
+.slider{
+  text-align:left;
+  margin: 0% 10%;
+  }
+
+.slide {
+  padding: 2%;
+}
+
+.slide p {
+  font-weight: 300;
+  font-size:.8em;
+  line-height: 1;
+}
+
+.slide h3 {
+  font-weight: 400;
+  font-size: 1em;
 }
 
 
