responsive, needs refactoring on margins and captions for shoe images

--- a/css/main.css
+++ b/css/main.css
@@ -27,8 +27,7 @@ canvas {
 }
 
 .wrapper {
-  width: 90%;
-  margin: 0 auto;
+  width: 100%
 }
 
 .header-container {
@@ -106,18 +105,44 @@ nav a:hover {
   line-height: .7;
 }
 
+/*************************
+Owl Carousel
+*************************/
+
+#owl-demo {
+  width: 90%;
+  margin: auto;
+}
+
 #owl-demo .item{
-  background: #a1def8;
   padding: 30px 0px;
-  display: block;
-  margin: 5px;
+  margin: 10px;
   color: #FFF;
+  max-height: 300px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
   text-align: center;
 }
 
+#owl-demo .item img{
+  display: block;
+  width: 100%;
+  height: 80%;
+}
+
+.customNavigation{
+  text-align: center;
+}
+
+.customNavigation a{
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 
 /*************************
 Media Queries
@@ -127,7 +152,7 @@ Media Queries
 
   nav a {
     float: right;
-    width: 15%;
+    width: 12%;
     padding: 5px 1%;
     margin-bottom: 0;
   }
@@ -182,7 +207,6 @@ Media Queries
   }
   
 }
-
 
 /*************************
 Clearfix
