--- a/css/main.css
+++ b/css/main.css
@@ -59,11 +59,16 @@ nav a:hover {
   background: linear-gradient(to bottom, rgba(216,205,120,1) 0%, rgba(155,219,181,1) 98%, rgba(155,219,181,1) 100%);
 }
 .main article {
-  padding: 8% 0;
+  padding: 5% 2%;
+  margin-left: 10%;
 }
 .main article h1 {
   font-size: 2.4em;
   font-weight: 600;
+}
+#demigrad{
+  background: rgba(255,255,255,.4);
+  width: 50%;
 }
 .btn-default {
   margin: 10px 5px;
@@ -111,48 +116,10 @@ Owl Carousel
   margin: 0 5%;
   text-align: left;
 }
-.customNavigation a{
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-
-/*owl other*/
-
-
-.owl-theme .owl-controls .owl-buttons div{
-  color: #FFF;
-  display: inline-block;
-  zoom: 1;
-  *display: inline;/*IE7 life-saver */
-  margin: 5px;
-  padding: 3px 10px;
-  font-size: 12px;
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  border-radius: 30px;
-  background: #869791;
-  filter: Alpha(Opacity=50);/*IE7 fix*/
-  opacity: 0.5;
-}
-/* Clickable class fix problem with hover on touch devices */
-/* Use it for non-touch hover action */
-.owl-theme .owl-controls.clickable .owl-buttons div:hover{
-  filter: Alpha(Opacity=100);/*IE7 fix*/
-  opacity: 1;
-  text-decoration: none;
-}
-
-/* Styling Pagination*/
-
 .owl-theme .owl-controls .owl-page{
   display: inline-block;
   zoom: 1;
-  *display: inline;/*IE7 life-saver */
+  *display: inline;
 }
 .owl-theme .owl-controls .owl-page span{
   display: block;
@@ -166,33 +133,7 @@ Owl Carousel
   border-radius: 20px;
   background: #869791;
 }
-
-.owl-theme .owl-controls .owl-page.active span,
-.owl-theme .owl-controls.clickable .owl-page:hover span{
-  filter: Alpha(Opacity=100);/*IE7 fix*/
-  opacity: 1;
-}
-
-/* If PaginationNumbers is true */
-
-.owl-theme .owl-controls .owl-page span.owl-numbers{
-  height: auto;
-  width: auto;
-  color: #FFF;
-  padding: 2px 10px;
-  font-size: 12px;
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  border-radius: 30px;
-}
-
-/* preloading images */
-.owl-item.loading{
-  min-height: 150px;
-  background: url(AjaxLoader.gif) no-repeat center center
-}
-
-#owl-demo .owl-item > div img {
+#owl-container .owl-item > div img {
     display: block;
     width: 100%;
     height: auto;
@@ -201,31 +142,18 @@ Owl Carousel
     border-radius: 3px;
     margin-bottom:4px;
 }
-
-#owl-demo .owl-item > div{
-  background : #42bdc2;
+#owl-container .owl-item > div{
   text-align: center;
-  padding:50px 0px;
-  margin:3px;
-  color: white;
-  font-size:32px;
-  border:1px white;
+  padding:0px 0px 100px;
+  margin:10px;
 }
-
-.wrapper-with-margin{
-  margin:0px 50px;
-}
-
- 
 .owl-theme .owl-controls .owl-buttons div {
   position: absolute;
 }
- 
 .owl-theme .owl-controls .owl-buttons .owl-prev{
   left: -45px;
   top: 150px; 
 }
- 
 .owl-theme .owl-controls .owl-buttons .owl-next{
   right: -45px;
   top: 150px;
